# DebridMovieMapper

./: .dockerignore  .gitignore  .ralph-memory.md  CLAUDE.md  Cargo.toml  Dockerfile  JELLYFIN_STRM_SETUP.md  README.md  STRM_ARCHITECTURE.md  TESTING.md  THIRD-PARTY-NOTICES  build.sh  compose.yml  readme_old.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-18-simplify-design.md  2026-02-18-simplify.md  2026-02-19-codebase-quality-fixes.md  2026-02-19-codebase-quality-review-design.md  2026-02-25-jellyfin-notification-design.md  2026-02-25-jellyfin-notification-plan.md
docs/superpowers/plans/: 2026-06-03-torbox-support-phase1-abstraction.md  2026-06-04-torbox-support-phase2-filelocator.md  2026-06-04-torbox-support-phase3-reacquire.md  2026-06-04-torbox-support-phase4-client.md  2026-06-06-sp0-foundation.md  2026-06-07-sp1-acquisition-engine.md  2026-06-08-sp2-trakt-sync.md  2026-06-09-sp3-upgrade-reconciliation.md
docs/superpowers/specs/: 2026-06-03-torbox-support-design.md  2026-06-05-trakt-integration-design.md  2026-06-06-sp1-acquisition-engine-design.md  2026-06-08-rate-limit-resilience-design.md  2026-06-08-sp2-trakt-sync-design.md  2026-06-09-sp3-upgrade-reconciliation-design.md
examples/: migrate_rd_to_torbox.rs
src/: acquire.rs  app_state.rs  config.rs  dav_fs.rs  enrolment.rs  error.rs  identification.rs  jellyfin_client.rs  main.rs  mapper.rs  probe.rs  provider.rs  ratelimit.rs  rd_client.rs  reacquire.rs  read_activity.rs  release.rs  repair.rs  scheduler.rs  scraper.rs  store.rs  tasks.rs  tmdb_client.rs  torbox_client.rs  trakt_client.rs  upgrade.rs  vfs.rs  wanted.rs
tests/: integration_test.rs  lifecycle_test.rs  repair_integration_test.rs  sp1_live_test.rs  test_all_rd_torrents.rs  test_identification_stats.rs  test_media_generation.rs  test_short_titles.rs  test_strm_generation.rs  trakt_integration_test.rs  trakt_smoke_test.rs  video_player_simulation.rs
