[package]
name = "debridmoviemapper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dav-server = "0.7"
futures-util = "0.3"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
dotenvy = "0.15"
urlencoding = "2"
rand = "0.8"
sled = "0.34"

[lib]
name = "debridmoviemapper"
path = "src/mapper.rs"
