[package]
name = "debridmoviemapper"
version = "1.0.5"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dav-server = { version = "0.11", default-features = false }
futures-util = "0.3"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
dotenvy = "0.15"
rand = "0.9"
redb = "3.1"
thiserror = "2"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

[dev-dependencies]
urlencoding = "2"

[lib]
name = "debridmoviemapper"
path = "src/mapper.rs"
